2009-01-07  Pino Toscano  <pino@kde.org>

	* update-mime-database.1: Update the URL to the specifications.
	Probably not the most correct one, but better than a non-existing page.

2009-01-06  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in:
	* tests/list:
	* tests/msg0001.gsm: Add audio/x-gsm for GSM 06.10 encoded audio files

2009-01-05  David Faure  <faure@kde.org>

	* freedesktop.org.xml.in: Remove application/x-msi magic,
	it was just generic ole-storage magic so even .doc files would match it.
	 (Closes: #18072)
	* tests/list: Add expected failure for the lookup by file data for test.msi,
	since we have no msi-specific magic. Would be better to be able to specify
	"the expected mimetype for this data-only lookup is ole-storage" in tests/list :-)

2008-12-20  David Faure  <faure@kde.org>

	* freedesktop.org.xml.in: Add magic for GIMP xcf files
	* tests/list: Fix the resulting "unexpected pass" for xcf.

2008-12-19  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Add cb7 files, Comic book archive
	created with 7z (Closes: #18887)
	* tests/comics.cb7:
	* tests/list: Add a test for cb7 files

2008-12-03  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Add magic for 7z archive files
	* tests/archive.7z:
	* tests/list: Add test case for the above

2008-11-13  Pino Toscano  <pino@kde.org>

	* freedesktop.org.xml.in: add definiton for the Microsoft Document
	Imaging format IANA MIME type, image/vnd.ms-modi.
	* tests/list:
	* tests/bluerect.mdi: Add a test MDI file, kindly provided by
	Brad Hards.

2008-11-03  David Faure  <faure@kde.org>

	* freedesktop.org.xml.in: add application/x-zip alias
	for application/zip, for compatibility with KDE 3.

2008-10-29  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: make PICTURES match a picture CD,
	not "Pictures", or "pictures"

2008-10-17  David Faure  <faure@kde.org>

	* freedesktop.org.xml.in: Add missing IANA-registered mimetype