@@ -419,6 +419,14 @@ command to generate the output files.
     <alias type="application/mdb"/>
     <alias type="application/x-mdb"/>
   </mime-type>
+  <mime-type type="application/vnd.ms-cab-compressed">
+    <_comment>Microsoft Cabinet archive</_comment>
+    <generic-icon name="package-x-generic"/>
+    <magic priority="50">
+      <match offset="0" type="string" value="MSCF\0\0\0\0" />
+    </magic>
+    <glob pattern="*.cab"/>
+  </mime-type>
   <mime-type type="application/vnd.ms-excel">
     <_comment>Excel spreadsheet</_comment>
     <generic-icon name="x-office-spreadsheet"/>
