@@ -151,6 +151,8 @@ test.msi application/x-msi ox
 # Created using 7z
 archive.7z application/x-7z-compressed
 comics.cb7 application/x-cb7 ox
+# Created using lcab
+copying.cab application/vnd.ms-cab-compressed
 
 # Audio/Video files
 # Copied from /usr/share/sounds/generic.wav
